--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = 'http://localhost:5000';
+        const API_BASE_URL = 'http://127.0.0.1:5000/';
         let isLoading = false;
 
         function formatTime() {
